# portfolio-prompt-efficiency-lab-attendee

./: .env.example  .gitignore  AGENTS.md  README.md  dbt_project.yml  profiles.yml  pyproject.toml
analyses/: compliance_reconciliation.sql  scratch_position_debug.sql
docs/: dbt_lineage_notes.md  repo_map.md
docs/runbooks/: demo_reset.md
macros/tests/: portfolio_weights_sum_to_one.sql
models/gold/archived/: legacy_monthly_rollup.sql
models/gold/compliance/: _compliance.yml  compliance_cross_currency_watchlist.sql  compliance_large_positions.sql
models/gold/portfolio_reporting/: _portfolio_reporting.yml  fct_portfolio_positions.sql  mart_portfolio_account_summary.sql  mart_portfolio_currency_exposure.sql  portfolio_positions_base.sql
models/silver/: _silver.yml  silver_accounts.sql  silver_concentration_thresholds.sql  silver_fx_rates.sql  silver_holdings.sql  silver_security_master.sql
scripts/: bootstrap_demo.py  reset_demo_state.py
seeds/: raw_accounts.csv  raw_concentration_thresholds.csv  raw_fx_rates.csv  raw_holdings.csv  raw_security_master.csv
