[project]
name = "portfolio-prompt-efficiency-lab"
version = "0.1.0"
description = "Sandbox dbt project for demonstrating prompt efficiency with AI coding agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dbt-duckdb>=1.9,<1.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_prompt_efficiency_lab"]
